# CanvasMassUpload

./: .gitignore  README.md  pyproject.toml
test_harness/: __main__.py
test_harness/mass_uploader/: generate_config.py  main.py  uploader.py
test_harness/mass_uploader/config/: __init__.py  configroot.py  course.py  secrets.py  submission.py
tests/: test_test_harness.py
